--- a/package.json
+++ b/package.json
@@ -2,9 +2,47 @@
   "name": "chotto-theme-mobilon1",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build && vue-tsc --emitDeclarationOnly",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o docs",
+    "lint-fix": "npx eslint . --fix",
+    "lint": "npx eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@fontsource/montserrat": "^5.2.6",
+    "@fontsource/open-sans": "^5.2.6",
+    "linkify-string": "^4.3.2",
+    "linkifyjs": "^4.3.2",
+    "primeicons": "^7.0.0",
+    "vue": "^3.5.18",
+    "vue3-emoji-picker": "^1.1.8"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.0",
+    "@eslint/js": "^9.33.0",
+    "@storybook/addon-docs": "^9.1.2",
+    "@storybook/addon-links": "^9.1.2",
+    "@storybook/vue3-vite": "^9.1.2",
+    "@types/node": "^22.17.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "eslint": "^9.33.0",
+    "eslint-plugin-storybook": "9.1.2",
+    "eslint-plugin-vue": "^9.33.0",
+    "moment": "^2.30.1",
+    "pinia": "^2.3.1",
+    "sass-embedded": "^1.90.0",
+    "storybook": "^9.1.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.17.0",
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^2.3.1",
+    "vue-tsc": "^2.2.12"
   },
   "author": "",
   "license": "ISC"
