--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "chotto-theme-mobilon1",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --emitDeclarationOnly",
@@ -15,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@mobilon-dev/chotto": "^0.0.134",
     "@fontsource/montserrat": "^5.2.6",
     "@fontsource/open-sans": "^5.2.6",
     "linkify-string": "^4.3.2",
